--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,34 @@
 anyio==3.6.2
+attrs==22.1.0
+black==22.10.0
+certifi==2022.9.24
 click==8.1.3
+exceptiongroup==1.0.4
 fastapi==0.88.0
+fastapi-pagination==0.11.0
 greenlet==2.0.1
 h11==0.14.0
+httpcore==0.16.2
 httptools==0.5.0
+httpx==0.23.1
 idna==3.4
+iniconfig==1.1.1
+isort==5.10.1
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.10.2
+platformdirs==2.5.4
+pluggy==1.0.0
 pydantic==1.10.2
+pyparsing==3.0.9
+pytest==7.2.0
 python-dotenv==0.21.0
 PyYAML==6.0
+rfc3986==1.5.0
 sniffio==1.3.0
 SQLAlchemy==1.4.44
 starlette==0.22.0
+tomli==2.0.1
 typing_extensions==4.4.0
 uvicorn==0.20.0
 uvloop==0.17.0
